k8s_deploy/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-cache
  namespace: docker-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-cache
  template:
    metadata:
      labels:
        app: docker-registry-cache
    spec:
      containers:
      - name: docker-registry-cache
        image: registry:2
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: registry-htpasswd
            mountPath: /auth/
            readOnly: True
          - name: registry-config
            mountPath: /etc/docker/registry/
            readOnly: True
        ports:
          - name: http
            containerPort: 5000
      volumes:
        - name: registry-htpasswd
          secret:
            secretName: registry-htpasswd
            defaultMode: 0400
        - name: registry-config
          configMap:
            name: registry-config
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-cache-service
  namespace: docker-cache
  labels:
    app: docker-registry-cache
spec:
  selector:
    app: docker-registry-cache
  ports:
  - port: 5000
    name: http
    targetPort: 5000
