k8s_deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-cache-ingress
  namespace: docker-cache
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: registry.openpai.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry-cache-service
            port:
              number: 5000
